src/test/testFiles/valid/stackConstructorFast.val
@speed(5) {
let x = Stack<number>() {1, 2, 3};
let y = Stack<number>();
}