src/test/testFiles/invalid/semanticErrors/stackTooManyArgumentsInConstructor.val
let x = Stack<number>(1);